--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "10.4.14",
+    "clsx": "^1.2.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
