--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^6.5.0",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@reduxjs/toolkit": "^1.9.5",
+    "@splidejs/react-splide": "^0.7.12",
     "@types/node": "20.2.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -38,12 +39,16 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-slick": "^0.23.10",
     "prettier": "2.8.8"
   }
 }
